--- a/scraper_experiment.ipynb
+++ b/scraper_experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,38 +122,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'SIR BAUDELAIRE (feat. DJ Drama)': '85,756,772',\n",
-       " 'CORSO': '110,524,176',\n",
-       " 'LEMONHEAD (feat. 42 Dugg)': '112,386,302',\n",
-       " 'WUSYANAME (feat. Youngboy Never Broke Again & Ty Dolla $ign)': '346,032,113',\n",
-       " 'LUMBERJACK': '144,754,546',\n",
-       " 'HOT WIND BLOWS (feat. Lil Wayne)': '127,280,379',\n",
-       " 'MASSA': '71,808,301',\n",
-       " 'RUNITUP (feat. Teezo Touchdown)': '75,353,365',\n",
-       " 'MANIFESTO (feat. Domo Genesis)': '51,680,446',\n",
-       " 'SWEET / I THOUGHT YOU WANTED TO DANCE (feat. Brent Faiyaz & Fana Hues)': '284,751,232',\n",
-       " 'MOMMA TALK': '26,399,314',\n",
-       " 'RISE! (feat. DAISY WORLD)': '57,012,851',\n",
-       " 'BLESSED': '40,662,483',\n",
-       " 'JUGGERNAUT (feat. Lil Uzi Vert & Pharrell Williams)': '143,964,968',\n",
-       " 'WILSHIRE': '79,506,423',\n",
-       " 'SAFARI': '53,703,927'}"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'track_streams' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtrack_streams\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'track_streams' is not defined"
+     ]
     }
    ],
    "source": [
     "track_streams"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "link = input('Paste your spotify album url:\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
